reglage des fps + ajout temps d'attack