@@ -8,6 +8,7 @@ import apps.setting.SettingPersonnage;
 import javafx.application.Platform;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.fxml.FXML;
+import javafx.scene.Node;
 import javafx.scene.control.Label;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
@@ -18,17 +19,22 @@ import javafx.scene.layout.Pane;
 import javafx.scene.layout.StackPane;
 import javafx.stage.WindowEvent;
 import model.character.Direction;
+import model.character.WhoFight;
 import model.character.hero.Hero;
 import model.game_pack.Game;
 
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.Set;
+import java.util.HashSet;
+import java.awt.Point;
 
 public class GameController extends Pane {
     public final Game GAME;
     public final SettingPersonnage[] SETTINGS;
     public final long timeSt;
+    private Node[][] gridPaneArray = null;
     public static ScheduledExecutorService service;
     @FXML
     GridPane map;
@@ -65,47 +71,34 @@ public class GameController extends Pane {
         for (int i = 0; i < GAME.NB_HERO; i++) {
             SettingPersonnage setting_personnage = JsonSetting.getSetting(i);
             if (setting_personnage.contain(key)) {
+                Hero hero = GAME.HEROS.get(i);
+                Set<Point> cells = new HashSet<>();
+                cells.add(new Point(hero.getPosX(), hero.getPosY()));
                 switch (setting_personnage.getKeyString(key)) {
                     case "UP": {
-                        Hero hero = GAME.HEROS.get(i);
                         hero.direction = Direction.TOP;
-                        if(hero.getLocation().move(hero)){
-                            this.resetMap();
-                        }else{
-                            System.out.println("impossible move");
-                        }
                         break;
                     }
                     case "DOWN": {
-                        Hero hero = GAME.HEROS.get(i);
                         hero.direction = Direction.BOTTOM;
-                        if(hero.getLocation().move(hero)){
-                            this.resetMap();
-                        }else{
-                            System.out.println("impossible move");
-                        }
                         break;
                     }
                     case "LEFT": {
-                        Hero hero = GAME.HEROS.get(i);
                         hero.direction = Direction.LEFT;
-                        if(hero.getLocation().move(hero)){
-                            this.resetMap();
-                        }else{
-                            System.out.println("impossible move");
-                        }
                         break;
                     }
                     case "RIGHT": {
-                        Hero hero = GAME.HEROS.get(i);
                         hero.direction = Direction.RIGHT;
-                        if(hero.getLocation().move(hero)){
-                            this.resetMap();
-                        }else{
-                            System.out.println("impossible move");
-                        }
                         break;
                     }
+                }
+                if(hero.getLocation().move(hero)){
+                    cells.add(new Point(hero.getPosX(), hero.getPosY()));
+                    cells.forEach(cell -> {
+                        this.resetCell(cell.x, cell.y);
+                    });
+                } else {
+                    System.out.println("impossible move");
                 }
             }
         }
@@ -122,11 +115,25 @@ public class GameController extends Pane {
             // Action à effectuer toutes les demi-secondes
             Platform.runLater(() -> {
                 this.resetInterface();
+                Set<Point> cells = new HashSet<>();
+                GAME.getMainHero().getLocation().getCharacters().forEach(character -> {
+                    if (character instanceof WhoFight && !(character instanceof Hero)){
+                        cells.add(new Point(character.getPosX(), character.getPosY()));
+                    }
+                });
                 if (!GAME.attackHero()){
                     System.out.println("game lose");
                     this.resetInterface();
                     service.shutdown();
                 }
+                GAME.getMainHero().getLocation().getCharacters().forEach(character -> {
+                    if (character instanceof WhoFight && !(character instanceof Hero)){
+                        cells.add(new Point(character.getPosX(), character.getPosY()));
+                    }
+                });
+                cells.forEach(cell -> {
+                    this.resetCell(cell.x, cell.y);
+                });
                 //System.out.println("Action exécutée toutes les demi-secondes");
             });
         }, 0, 500, TimeUnit.MILLISECONDS);
@@ -137,11 +144,30 @@ public class GameController extends Pane {
             }
         });
     }
+
     @FXML
     public void initialize(){
         nameLocation.textProperty().bind(new SimpleStringProperty(GAME.getMainHero().getLocation().NAME.name()));
         this.resetInterface();
+        this.initializeGridPaneArray();
+        this.resetMap();
     }
+
+    private void initializeGridPaneArray()
+    {
+        
+       this.gridPaneArray = new Node[GAME.SIZE_MAP_X][GAME.SIZE_MAP_y];
+       for(Node node : map.getChildren())
+       {
+          this.gridPaneArray[GridPane.getRowIndex(node)][GridPane.getColumnIndex(node)] = node;
+       }
+    }
+
+    private void changeNode(Node node, int x, int y)
+    {
+        gridPaneArray[x][y]=node;
+    }
+    
     public void reset(int x, int y){
         Image fondImage = new Image(MapCreatorController.class.getResource("/sprites/floor.png").toExternalForm());
         ImageView fond = new ImageView(fondImage);
@@ -152,7 +178,9 @@ public class GameController extends Pane {
             image.getChildren().add(spray);
         }
         map.add(image,x,y);
+        changeNode(image, x, y);
     }
+    
     public void resetMap(){
         map.getChildren().clear();
         for (int x = 0; x < GAME.getMainHero().getLocation().SIZE_X; x++){
@@ -161,12 +189,18 @@ public class GameController extends Pane {
             }
         }
     }
+    
+    public void resetCell(int x, int y) {
+        Node n = this.gridPaneArray[x][y];
+        map.getChildren().remove(n);
+        reset(x, y);
+    }
+
     public void resetInterface(){
-        resetMap();
         time.setText(String.valueOf((System.nanoTime() - timeSt) / 1000000000));
 
-        joueur1hp.setText(String.valueOf(GAME.HEROS.getFirst().getHp()));
-        joueur1nbKey.setText(String.valueOf(GAME.HEROS.getFirst().getNbKeys()));
+        joueur1hp.setText(String.valueOf(GAME.HEROS.get(0).getHp()));
+        joueur1nbKey.setText(String.valueOf(GAME.HEROS.get(0).getNbKeys()));
         try {
             joueur2hp.setText(String.valueOf(GAME.HEROS.get(1).getHp()));
             joueur2nbKey.setText(String.valueOf(GAME.HEROS.get(1).getNbKeys()));
